# sepcial_agents

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: co2.csv  dummy.ipynb  examples.ipynb  gdp.csv
special_agents/agents/: __init__.py  dummy_agent.py  guided_agent.py
special_agents/chain/: treeofthought_chain.py
