[tool.poetry]
name = "special-agents"
version = "0.1.0"
description = ""
authors = ["Kevin Hu <hxy9243@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "special_agents"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
